--- a/packages/reactui/tsconfig.json
+++ b/packages/reactui/tsconfig.json
@@ -1,17 +1,10 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-      "jsx": "react",
-      "outDir": "./dist",
-      "declaration": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true
+      "outDir": "./dist"
     },
     "include": [
       "./**/*.ts",
       "./**/*.tsx"
-    ],
-    "exclude": [
-      "dist"
-    ],
+    ]
 }
