--- a/package.json
+++ b/package.json
@@ -321,6 +321,7 @@
     "@types/mocha": "^10.0.1",
     "@types/mustache": "^4.2.2",
     "@types/node": "^18.14.2",
+    "@types/prettier": "^2.7.3",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vscode/test-electron": "^2.2.0",
