--- a/packages/spec/package.json
+++ b/packages/spec/package.json
@@ -2,9 +2,13 @@
   "name": "spec",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Pankaj Pipada",
