--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,18 @@
       "DOM"
     ],
     "paths": {
-      "@/*": ["packages/*"]
+      "@/aiprovider/*": ["packages/aiprovider/*"],
+      "@/conversations/*": ["packages/conversations/*"],
+      "@/logger/*": ["packages/logger/*"],
+      "@/prompts/*": ["packages/prompts/*"],
+      "@/spec/*": ["packages/spec/*"],
+      "@/reactui/*": ["packages/reactui/*"]
     },
     "baseUrl": "./",
     "esModuleInterop": true,
     "jsx": "react",
     "outDir": "out",
+    "declarationDir": "dist/types",
     "declaration": true,
     "strict": true
   },
