--- a/packages/prompts/package.json
+++ b/packages/prompts/package.json
@@ -2,11 +2,18 @@
   "name": "prompts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Pankaj Pipada",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mustache": "^4.2.0"
+  }
 }
