--- a/packages/spec/tsconfig.json
+++ b/packages/spec/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./dist"
+  },
   "include": [
-    "./*.ts",
     "./**/*.ts"
-, "../logger/log.ts"  ]
+  ]
 }
