--- a/packages/reactui/package.json
+++ b/packages/reactui/package.json
@@ -11,7 +11,6 @@
     "dev": "webpack serve --config webpack.config.js --mode=development",
     "build": "webpack --config webpack.config.js --mode=production",
     "start": "rollup -c -w",
-    "prepare": "npm run build",
     "clean": "rimraf dist"
   },
   "keywords": [],
@@ -46,7 +45,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.30",
     "postcss-loader": "^7.3.3",
-    "style-loader": "^3.3.3",
+    "process": "^0.11.10",
     "tailwindcss": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
