reactui chat send panel

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,27 +7,17 @@
     "tabWidth": 2,
     "trailingComma": "none",
     "importOrder": [
-      "^(react/(.*)$)|^(react$)",
-      "^(next/(.*)$)|^(next$)",
+      "^(react/(.*)$)|^(react$)|^(react(.*)$)",
+      "^(@nextui-org/(.*)$)|^(@nextui-org$)",
+      "^(@/(.*)$)|^(@/$)",
       "<THIRD_PARTY_MODULES>",
-      "",
-      "^types$",
-      "^@/types/(.*)$",
-      "^@/config/(.*)$",
-      "^@/lib/(.*)$",
-      "^@/hooks/(.*)$",
-      "^@/components/ui/(.*)$",
-      "^@/components/(.*)$",
-      "^@/registry/(.*)$",
-      "^@/styles/(.*)$",
-      "^@/app/(.*)$",
       "",
       "^[./]"
     ],
-    "importOrderSeparation": false,
+    "importOrderSeparation": true,
     "importOrderSortSpecifiers": true,
     "importOrderBuiltinModulesToTop": true,
-    "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
+    "importOrderParserPlugins": ["typescript", "tsx", "jsx", "decorators-legacy"],
     "importOrderMergeDuplicateImports": true,
     "importOrderCombineTypeAndValueImports": true
   }
