--- a/packages/reactui/package.json
+++ b/packages/reactui/package.json
@@ -27,8 +27,8 @@
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
     "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.16.0",
     "react-syntax-highlighter": "^15.5.0",
-    "react-textarea-autosize": "^8.5.3",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "tailwind-merge": "^1.14.0",
