moving to dependencies in npm workspaces

--- a/package.json
+++ b/package.json
@@ -304,15 +304,21 @@
     "vscode:prepublish": "npm run truncate-yaml && npm run esbuild-base -- --minify",
     "truncate-yaml": "echo '' > ./conversations.yml",
     "esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
-    "build": "npm run build-reactui && npm run -S esbuild-base --no-cache -- --sourcemap",
-    "build-reactui": "cd packages/reactui && npm run build",
+    "build": "npm run -S esbuild-base --no-cache -- --sourcemap",
+    "build:aiprovider": "cd packages/aiprovider && npm run build",
+    "build:conversations": "cd packages/conversations && npm run build",
+    "build:logger": "cd packages/logger && npm run build",
+    "build:prompts": "cd packages/prompts && npm run build",
+    "build:spec": "cd packages/spec && npm run build",
+    "build:reactui": "cd packages/reactui && npm run build-vscode",
+    "prebuild": "npm run build:spec && npm run build:logger && npm run build:conversations && npm run build:prompts && npm run build:aiprovider && npm run build:reactui",
     "watch": "npm run build",
-    "test": "node ./out/src/test/runTest.js",
-    "compile-tests": "tsc -p . --skipLibCheck --outDir out",
-    "watch-tests": "tsc -p . -w --skipLibCheck --outDir out",
-    "pretest": "npm run compile-tests && npm run lint",
+    "compile-tests": "tsc -p tsconfig.tests.json ./src",
+    "test": "node ./out/test/src/test/runTest.js",
+    "pretest": "rimraf out/test && npm run compile-tests",
     "lint": "eslint src --ext ts --fix",
-    "debug": "node --inspect-brk $(which vscode-inspect-brk) . --extensionDevelopmentPath=/Users/pankajpipada/github/vscode-flexigpt"
+    "debug": "node --inspect-brk $(which vscode-inspect-brk) . --extensionDevelopmentPath=/Users/pankajpipada/github/vscode-flexigpt",
+    "clean": "rimraf out && cd packages/reactui && npm run clean"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
@@ -320,8 +326,10 @@
     "@types/glob": "^8.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^10.0.1",
+    "@types/mustache": "^4.2.3",
     "@types/node": "^18.14.2",
     "@types/prettier": "^2.7.3",
+    "@types/vscode": "^1.82.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vscode/test-electron": "^2.2.0",
@@ -334,14 +342,21 @@
     "mocha": "^10.2.0",
     "npm-version": "^1.1.0",
     "rimraf": "^4.1.2",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "@types/uuid": "^9.0.1",
-    "@types/vscode": "^1.76.0",
+    "aiprovider": "^1.0.0",
     "axios": "^1.4.0",
+    "conversations": "^1.0.0",
+    "logger": "^1.0.0",
     "prettier": "^2.8.8",
+    "prompts": "^1.0.0",
+    "reactui": "^1.0.0",
+    "spec": "^1.0.0",
     "uuid": "^9.0.0"
   },
   "workspaces": [
