--- a/packages/aiprovider/package.json
+++ b/packages/aiprovider/package.json
@@ -14,6 +14,8 @@
   "author": "Pankaj Pipada",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "logger": "^1.0.0",
+    "spec": "^1.0.0"
   }
 }
