--- a/packages/reactui/tsconfig.json
+++ b/packages/reactui/tsconfig.json
@@ -1,7 +1,12 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-      "outDir": "./dist"
+      "outDir": "./dist",
+      "paths": {
+        "@/*": [
+          "packages/reactui/*"
+        ]
+      }
     },
     "include": [
       "./**/*.ts",
