moving to dependencies in npm workspaces

--- a/package.json
+++ b/package.json
@@ -313,8 +313,8 @@
     "build:reactui": "cd packages/reactui && npm run build-vscode",
     "prebuild": "npm run build:spec && npm run build:logger && npm run build:conversations && npm run build:prompts && npm run build:aiprovider && npm run build:reactui",
     "watch": "npm run build",
-    "compile-tests": "tsc -p tsconfig.tests.json ./src",
-    "test": "node ./out/test/src/test/runTest.js",
+    "compile-tests": "tsc -p ./tsconfig.tests.json",
+    "test": "node ./out/test/test/runTest.js",
     "pretest": "rimraf out/test && npm run compile-tests",
     "lint": "eslint src --ext ts --fix",
     "debug": "node --inspect-brk $(which vscode-inspect-brk) . --extensionDevelopmentPath=/Users/pankajpipada/github/vscode-flexigpt",
