--- a/packages/reactui/tsconfig.json
+++ b/packages/reactui/tsconfig.json
@@ -2,6 +2,8 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
       "outDir": "./dist",
+      "declarationDir": "./dist/types",
+      "declaration": true,
       "paths": {
         "@/*": [
           "packages/reactui/*"
