--- a/package.json
+++ b/package.json
@@ -300,25 +300,24 @@
     "conversations.yml"
   ],
   "scripts": {
-    "prepublish": "npm run truncate-yaml",
-    "vscode:prepublish": "npm run truncate-yaml && npm run esbuild-base -- --minify",
-    "truncate-yaml": "echo '' > ./conversations.yml",
+    "preinstall": "npx only-allow pnpm",
     "esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
-    "build": "npm run -S esbuild-base --no-cache -- --sourcemap",
-    "build:aiprovider": "cd packages/aiprovider && npm run build",
-    "build:conversations": "cd packages/conversations && npm run build",
-    "build:logger": "cd packages/logger && npm run build",
-    "build:prompts": "cd packages/prompts && npm run build",
-    "build:spec": "cd packages/spec && npm run build",
-    "build:reactui": "cd packages/reactui && npm run build-vscode",
-    "prebuild": "npm run build:spec && npm run build:logger && npm run build:conversations && npm run build:prompts && npm run build:aiprovider && npm run build:reactui",
-    "watch": "npm run build",
+    "build:packages": "pnpm -r --filter './packages/!reactui' run build && pnpm --filter './packages/reactui' run build-vscode",
+    "build:top": "pnpm run esbuild-base --sourcemap",
+    "build": "pnpm run build:packages && pnpm run build:top",
+    "watch": "pnpm run build --watch",
+    "clean:packages": "pnpm -r --filter './packages/*' run clean",
+    "clean:top": "rimraf out",
+    "clean": "pnpm run clean:packages && pnpm run clean:top",
+    "pretest": "rimraf out/test && pnpm run compile-tests",
     "compile-tests": "tsc -p ./tsconfig.tests.json",
-    "test": "node ./out/test/test/runTest.js",
-    "pretest": "rimraf out/test && npm run compile-tests",
+    "test:packages": "pnpm -r --filter './packages/*' run test",
+    "test": "pnpm run test:packages && node ./out/test/test/runTest.js",
     "lint": "eslint src --ext ts --fix",
     "debug": "node --inspect-brk $(which vscode-inspect-brk) . --extensionDevelopmentPath=/Users/pankajpipada/github/vscode-flexigpt",
-    "clean": "rimraf out && cd packages/reactui && npm run clean"
+    "truncate-yaml": "echo '' > ./conversations.yml",
+    "prepublish": "pnpm run truncate-yaml",
+    "vscode:prepublish": "pnpm run truncate-yaml && pnpm run build --minify"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
@@ -341,7 +340,7 @@
     "js-yaml": "^4.1.0",
     "mocha": "^10.2.0",
     "npm-version": "^1.1.0",
-    "rimraf": "^4.1.2",
+    "rimraf": "^5.0.5",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0",
     "ts-loader": "^9.4.2",
@@ -349,14 +348,14 @@
   },
   "dependencies": {
     "@types/uuid": "^9.0.1",
-    "aiprovider": "^1.0.0",
+    "aiprovider": "workspace:*",
     "axios": "^1.4.0",
-    "conversations": "^1.0.0",
-    "logger": "^1.0.0",
+    "conversations": "workspace:*",
+    "logger": "workspace:*",
     "prettier": "^2.8.8",
-    "prompts": "^1.0.0",
-    "reactui": "^1.0.0",
-    "spec": "^1.0.0",
+    "prompts": "workspace:*",
+    "reactui": "workspace:*",
+    "spec": "workspace:*",
     "uuid": "^9.0.0"
   },
   "workspaces": [
