--- a/packages/prompts/package.json
+++ b/packages/prompts/package.json
@@ -14,7 +14,7 @@
   "author": "Pankaj Pipada",
   "license": "MIT",
   "dependencies": {
-    "logger": "^1.0.0",
+    "logger": "workspace:*",
     "mustache": "^4.2.0"
   }
 }
