--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,13 +8,13 @@
     "trailingComma": "none",
     "importOrder": [
       "^(react/(.*)$)|^(react$)|^(react(.*)$)",
+      "^(grommet/(.*)$)|^(grommet$)|^(grommet(.*)$)",
       "^(@/logger/(.*)$)|^(@/logger$)",
       "^(@/spec/(.*)$)|^(@/spec$)",
       "^(@/aiprovider/(.*)$)|^(@/aiprovider$)",
       "^(@/prompts/(.*)$)|^(@/prompts$)",
       "^(@/conversations/(.*)$)|^(@/conversations$)",
       "^(@/reactui/lib/(.*)$)|^(@/reactui/lib$)",
-      "^(@nextui-org/(.*)$)|^(@nextui-org$)",
       "^(@/reactui/components/(.*)$)|^(@/reactui/components$)",
       "<THIRD_PARTY_MODULES>",
       "",
