--- a/packages/reactui/package.json
+++ b/packages/reactui/package.json
@@ -20,17 +20,14 @@
   "author": "Pankaj Pipada",
   "license": "MIT",
   "dependencies": {
-    "@nextui-org/react": "^2.1.13",
-    "ai": "^2.2.13",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
+    "grommet": "^2.34.1",
+    "grommet-icons": "^4.11.0",
     "logger": "workspace:*",
     "nanoid": "^5.0.3",
-    "next-themes": "^0.2.1",
     "postcss-preset-env": "^9.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.16.0",
@@ -38,9 +35,9 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "spec": "workspace:*",
+    "styled-components": "5.3.10",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.5",
-    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
