--- a/packages/reactui/package.json
+++ b/packages/reactui/package.json
@@ -32,6 +32,7 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.16.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.5.3",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "spec": "workspace:*",
