added a workflow provider aggregate package. No changes to extension as of now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "node_modules",
     ".vscode-test",
     "**/node_modules",
-    "**/out"
+    "**/out",
+    "**/dist",
   ],
   "include": [
     "./**/*.ts", // Include your source files
