--- a/packages/reactui/package.json
+++ b/packages/reactui/package.json
@@ -36,7 +36,8 @@
     "styled-components": "5.3.10",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workflowprovider": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
@@ -45,6 +46,8 @@
     "autoprefixer": "^10.4.16",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.32",
