--- a/packages/workflowprovider/package.json
+++ b/packages/workflowprovider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prompts",
+  "name": "workflowprovider",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -14,8 +14,12 @@
   "author": "Pankaj Pipada",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.2",
+    "aiprovider": "workspace:*",
+    "conversations": "workspace:*",
     "logger": "workspace:*",
-    "mustache": "^4.2.0"
+    "prettier": "^3.1.1",
+    "prompts": "workspace:*",
+    "spec": "workspace:*",
+    "uuid": "^9.0.1"
   }
 }
