--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "import"
     ],
     "rules": {
         "@typescript-eslint/naming-convention": "off",
