--- a/packages/reactui/package.json
+++ b/packages/reactui/package.json
@@ -21,12 +21,15 @@
   "author": "Pankaj Pipada",
   "license": "MIT",
   "dependencies": {
+    "aiprovider": "workspace:*",
+    "conversations": "workspace:*",
     "clsx": "^2.0.0",
     "grommet": "^2.34.2",
     "grommet-icons": "^4.12.0",
     "logger": "workspace:*",
     "nanoid": "^5.0.4",
     "postcss-preset-env": "^9.1.4",
+    "prompts": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
